<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="50dp"
            />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signIn"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_baseline_person_outline_24"
            android:hint="@string/user_name"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/password"
            android:drawableLeft="@drawable/ic_baseline_info_24"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/logInBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/log_in" />

        <Button
            android:id="@+id/forgotPassword"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_toEndOf="@id/logInBtn"
            android:layout_marginLeft="10dp"
            android:background="?android:attr/selectableItemBackground"/>
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>