<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_up"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/sign_up_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_baseline_info_24"
            android:hint="@string/user_name"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/sign_up_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_up_username"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_baseline_info_24"
            android:hint="First Name"
            android:inputType="text"
            android:minHeight="48dp" />
        <EditText
            android:id="@+id/sign_up_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_up_first_name"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_baseline_info_24"
            android:hint="Last Name"
            android:inputType="text"
            android:minHeight="48dp" />
        <EditText
            android:id="@+id/sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_up_last_name"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_baseline_info_24"
            android:hint="Email"
            android:inputType="text"
            android:minHeight="48dp" />
        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_up_email"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_baseline_info_24"
            android:hint="@string/password"
            android:inputType="text"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_up_password"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="160dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="160dp"
            android:background="@android:color/holo_blue_bright"
            android:text="Sign Up" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>